1. 修复在已有一个或多个属性下【手气不错】的bug 2. 超级模式下js解析的bug 3. 退出时提示会有哪些任务还没保存，提示保存 4. 强化手气不错功能

--- a/Hawk.Core/Properties/Resources.resx
+++ b/Hawk.Core/Properties/Resources.resx
@@ -118,13 +118,16 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Closing" xml:space="preserve">
-    <value>是否确定离开本软件? 请在关闭前保存要保存的工程</value>
+    <value>是否确定离开Hawk? </value>
   </data>
   <data name="ConfigNull" xml:space="preserve">
     <value>不包含任何有关配置文件的任何信息，请检查</value>
   </data>
   <data name="ControlLoad" xml:space="preserve">
     <value>控件加载</value>
+  </data>
+  <data name="Closing2" xml:space="preserve">
+    <value>【{0}】任务还没有保存，【是】:保存任务并退出, 【否】：不保存退出，【取消】:取消退出</value>
   </data>
   <data name="DataMgmt" xml:space="preserve">
     <value>数据管理</value>
