1. 优化sqlite的交互，修复插入时的错误 2. 优化采集器UI，支持搜索字符时自动跳转到对应位置并高亮 3. tab页面的title与任务名字同步 4. 将网页采集器,xpath,json,python转换器的工作模式统一为一种 5. 强化采集逻辑，能支持采集InnerText,OuterHtml等 6. 清洗支持模块和任务复制，网页采集器支持xpath复制 7. 数据清洗支持自动刷新 8. 【重大更新】网页采集器one模式支持【手气不错】，搜索字符添加一个关键字，即可检索出和其模式相似的属性

--- a/Hawk.Core/Properties/Resources.resx
+++ b/Hawk.Core/Properties/Resources.resx
@@ -127,7 +127,7 @@
     <value>控件加载</value>
   </data>
   <data name="Closing2" xml:space="preserve">
-    <value>【{0}】任务可能还没有保存，【是】:保存任务并退出, 【否】：不保存退出，【取消】:取消退出</value>
+    <value>【{0}】任务可能还没有保存，\n【是】:保存任务并退出, \n【否】：不保存退出，\n【取消】:取消退出</value>
   </data>
   <data name="DataMgmt" xml:space="preserve">
     <value>数据管理</value>
